<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.sevcik</groupId>
        <artifactId>hypherator-parent</artifactId>
        <version>1.1-jdk11</version>
    </parent>
    <artifactId>hypherator-tools</artifactId>
    <dependencies>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.16.1</version>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <distributionManagement>
        <repository>
            <id>dummy</id>
            <url>file:///dev/null</url>
        </repository>
    </distributionManagement>
    <build>
        <plugins>
            <!-- Exec plugin to run the tool during build -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>generate-hyphenation-resources</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>io.sevcik.DictionariesProcessor</mainClass>
                            <arguments>
                                <argument>${project.basedir}/../dictionaries</argument>
                                <argument>${project.basedir}/../indic_dictionaries</argument>
                                <argument>${project.basedir}/../hypherator-core/src/main/resources/3pp_licenses</argument>
                                <argument>${project.basedir}/../hypherator-core/src/main/resources/hyphen</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>